# entrabot

./: .entrabot-state.json.bak  .env.example  .envrc  .gitignore  .mcp.json  .mcp.json.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  TODOS.md  agency.toml  fix-build-tools.ps1  mkdocs.yml  owners.txt  pyproject.toml  status-windows.ps1  status.sh  test_demo_scenario.sh  test_demo_simple.py  test_sandbox_claude_code.md  test_sandbox_demonstration.md
.claude/: settings.json  settings.local.json
.claude-plugin/: plugin.json
.entrabot/: harness.json
.github/: copilot-instructions.md
.venv-test/: pyvenv.cfg
docs/: AGENT-PROMPT-persona-sati-integration.md  AGENT-PROMPT-provisioner-cert-auth.md  PLAN-mind-body-nervous-system-phase-3.md  PLAN-persona-sati-bootstrap-phases-1-2.md  SECURITY-DEBT-PROVISIONER-SECRET.md  TODO-persona-sati-host-bootstrap.md  TODO-persona-sati-integration.md  claude-copilot-cli-channel-port.md  claude-windows-port.md  engineering-status.md  index.md  openai-copilot-cli-notifications.md  openai-windows-agent-identity-port.md
prompts/: agent_system.md  agent_system.md.example
scripts/: add_agent.py  add_agent_sponsor.py  assign_agent_user_licenses.py  catch_up.py  claude_memory_sync.py  cleanup-orphans.sh  create_entra_agent_ids.py  demo_sandbox.ps1  demo_sandbox.py  demo_sandbox_run.py  deploy-windows.ps1  deprovision_blob_storage.py  deprovision_entra_agent_identity.py  diagnose-chat.py  diagnose_sponsor_emails.py  dm.py  dm_brandon.py  ensure_a365_work_iq_permissions.py  entra_provisioning.py  entrabot-mcp-debug.sh  entraclaw-mcp-debug.sh  export-state.sh  find_local_blueprint_cert.py  generate_windows_cert.py  grant_consent.py  grant_files_consent.py  health_check.py  import-state.sh  list_agent_identities.py  list_blueprint_certs.py  list_sponsors.py  mcp_config.py  migrate_cursors_to_upn.py  mxc-mac-stdin-compat.patch  prereqs-macos.sh  prereqs-windows.ps1  provision_blob_storage.py  provisioner-token.py  read_email.py  register_blueprint_cert.py  (+19 more)
tests/: conftest.py  test_certificate_windows.py  test_cncrypt_signer.py  test_config.py  test_config_windows_path.py  test_cursor_migration.py  test_deploy_rollback.py  test_efferent_copy.py  test_entra_provisioning_keyring_backend.py  test_errors.py  test_generate_windows_cert.py  test_graph_helpers.py  test_host_detection.py  (+20 more)
(+506 files in other folders)
