[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entrabot-identity-research"
version = "0.1"
description = "Research: securing agentic workflows on devices with Agent IDs and OBO flows"
requires-python = ">=3.12"
dependencies = [
    "msal>=1.28.0",
    "msal-extensions>=1.2.0",
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "keyring>=25.0.0",
    "platformdirs>=4.0.0",
    "pydantic>=2.0",
    "cryptography>=42.0",
    "PyJWT>=2.8.0",
    "pypdf>=4.0",
    "click>=8.1.0",
    # ENTRABOT harness: drives a Copilot agent session (sessions, streaming, tools,
    # MCP, per-call permission hook). Sibling of the .NET GitHub.Copilot.SDK.
    "github-copilot-sdk>=1.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "respx>=0.22.0",
    "azure-identity>=1.15.0",
]
provisioning = [
    "azure-identity>=1.15.0",
    "requests>=2.31",
    # keyring + cryptography power the cert-auth path for the Provisioner
    # app. Zero shared secrets: the private key lives in macOS Keychain,
    # the public cert is registered on the app reg in Entra.
    "keyring>=24",
    "cryptography>=42",
]
# Full-screen TUI for the harness (optional; the console UI is the default).
tui = [
    "textual>=0.60",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["docs/reference/agent-foundry-*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "eval: LLM eval suite for files-mcp scenarios (gates PR1 merge per docs/architecture/PLAN-files-mcp-tools.md §Testing)",
]

[tool.coverage.run]
source = ["entrabot"]
omit = [
    "src/entrabot/mcp_server.py",
    "src/entrabot/logging_config.py",
    "src/entrabot/platform/mac.py",
    "src/entrabot/platform/linux.py",
    "src/entrabot/platform/windows.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
entrabot-mcp = "entrabot.mcp_server:main"
entrabot-harness = "entrabot.harness.cli:main"
